--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <h2>Find Me Online</h2>
     <a href="http://github.com/triveni297" target="_blank">GitHub</a>
     <a href="https://www.linkedin.com/in/triveni-durgam-1a1203359/" target="_blank">LinkedIn</a>
-    <a href="http://leetcode.com/triveni" target="_blank">LeetCode</a>
+    <a href="https://leetcode.com/profile/" target="_blank">LeetCode</a>
     <a href="mailto:trivenidurgam2006@gmail.com" target="_blank">Email</a>
   </section>
 
